kustomize-units/firewall/common/all-nodes-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: all-nodes-policy
spec:
  selector: has(node.kubernetes.io/instance-type)
  order: 60
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: role == 'allowed-to-ssh'
    destination:
      ports:
      - 22
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
  - action: Allow
    protocol: ICMP
  - action: Allow
    protocol: TCP
    source:
      selector: has(node.kubernetes.io/instance-type)
    destination:
      ports:
      - 10250 # kubelet
      - 179  # BGP
      - 5473 # calico CNI with Typha
      - 9098 # calico typha health checks
      - 9099 # calico health checks
      - 9796 # prometheus node exporter
      - 9808 # liveness probe
  - action: Allow
    protocol: UDP
    source:
      selector: has(node.kubernetes.io/instance-type)
    destination:
      ports:
      - 4789 # calico VXLAN
  - action: Allow
    protocol: UDP
    source:
      nets: ${NTP_SERVERS}
    destination:
      ports:
      - 323  # NTP
  - action: Allow
    protocol: UDP
    destination:
      ports:
      - 68   # DHCP
  egress:
  - action: Allow
    protocol: TCP
  - action: Allow
    protocol: UDP
