kustomize-units/firewall/common/cluster-fip-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: cluster-fip-policy
spec:
  selector: node-role.kubernetes.io/control-plane == 'true'
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      nets: ${ALLOWED_EXTERNAL_SUBNETS_FOR_GUI}
    destination:
      nets:
      - ${CLUSTER_EXTERNAL_IP}
      ports:
      - 80
      - 443
  - action: Allow
    protocol: TCP
    source:
      nets: ${ALLOWED_EXTERNAL_SUBNETS_FOR_KUBEAPI}
    destination:
      nets:
      - ${CLUSTER_EXTERNAL_IP}
      ports:
      - 6443
  - action: Allow
    protocol: TCP
    source:
      selector: has(node.kubernetes.io/instance-type)
    destination:
      nets:
      - ${CLUSTER_EXTERNAL_IP}
      ports:
      - 6443 # kube-apiserver
  # temporary, allow access to the rke2 from all sources
  # the workload nodes are not created yet before the connection
  # from the agent to the server, so the host endpoint is not created yet
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - ${CLUSTER_EXTERNAL_IP}
      ports:
      - 9345 # rke2-server
  - action: Allow
    protocol: TCP
    source:
      nets:
      - ${CLUSTER_EXTERNAL_IP}
      ports:
      - 9345 # rke2-server
